--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@octokit/core": "^3.5.1",
     "@styled-system/css": "^5.1.5",
     "@styled-system/theme-get": "^5.1.2",
+    "js-cookie": "^3.0.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "17.0.19",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.13",
